# j3

./: .gitignore  AGENTS.md  FAQ.md  HARD_NEGATIVES.md  LICENSE  PROMPT_JEPA_DEMO.md  README.md  TRAINING.md  actions.py  ast_delta.py  candidate_ranking.py  cli.py  diagnostics_compare.py  evaluation.py  existing_repo_change.py  failure_hints.py  features.py  fixing.py  greenfield.py  greenshot_7.py  mining.py  new_plan.md  notes.md  patching.py  plan.md  prompt_intents.py  prompt_jepa.py  prompt_jepa_demo.py  pyproject.toml  repo.py  request_outcomes.py  request_spec.py  synth.py  training.py
candidate_ranker/: __init__.py  constants.py  feature_hints.py  feature_params.py  feature_relations.py  features.py  metrics.py  model.py  outcomes.py  summary.py  training.py  types.py  values.py
cli/: __init__.py  __main__.py  handlers.py  main.py  parser.py  progress.py
docs/: ACTION_COVERAGE_MAP.md  CODE_MATERIALIZATION_GAP.md  DATA_006_ISSUE_PR_PREFLIGHT_2026-05-18.md  DATA_007_ISSUE_PR_BLOCKER_DRILLDOWN_2026-05-18.md  DATA_008_REQUESTS_VALIDATION_RECIPE_2026-05-18.md  DATA_009_CLICK_DEFAULT_MAP_PROMPT_SPEC_2026-05-18.md  DATA_010_ISSUE_PR_READINESS_GATE_2026-05-18.md  DATA_015_ISSUE_PR_READINESS_REFRESH_2026-05-18.md  DATA_017_CLICK_AUXILIARY_MATERIALIZATION_GAP_2026-05-18.md  DATA_018_PYTEST_ISSUE_PR_PREFLIGHT_2026-05-18.md  DATA_019_CLICK_COMMANDS_DOCS_MATERIALIZER_2026-05-18.md  DATA_020_CLICK_DOCS_CONF_INTEGRATED_VALIDATION_2026-05-18.md  DATA_021_PYTEST_STRICT_ADDOPTS_EVIDENCE_2026-05-18.md  DATA_022_PYTEST_ISSUE_PR_READINESS_REFRESH_2026-05-18.md  HARD_NEGATIVES.md  (+91 more)
(+327 files in other folders)
