[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "j3"
version = "0.1.0"
description = "A local-first JEPA coding agent that plans structured Python patches."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "j3 contributors" }
]
keywords = ["jepa", "coding-agent", "program-repair", "pytest", "machine-learning"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
j3 = "cli:main"

[tool.setuptools]
py-modules = ["actions", "candidate_ranking", "cli", "diagnostics_compare", "evaluation", "failure_hints", "features", "fixing", "mining", "patching", "repo", "synth", "training"]
packages = ["candidate_ranker", "repair", "repair.patching", "repair.patching.generators"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
